--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest",
+    "test:ci": "jest --ci",
+    "test:watch": "jest --watch",
+    "test:update": "jest --updateSnapshot",
+    "test:coverage": "jest --coverage",
+    "test:changed": "jest --onlyChanged"
   },
   "eslintConfig": {
     "extends": [
@@ -47,10 +52,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/enzyme": "^3.10.10",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "autoprefixer": "^9",
+    "babel-jest": "^27.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^8.3.0",
+    "jest": "^27.3.1",
+    "jest-enzyme": "^7.1.2",
     "postcss": "^7",
     "prettier": "2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-jest": "^27.0.7"
   }
 }
