--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
