--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "cross-env TAILWIND_MODE=watch craco start",
+    "start": "TAILWIND_MODE=watch craco start",
     "build": "craco build",
     "eject": "react-scripts eject",
     "test": "jest",
